[package]
name = "iml-sfa"
version = "0.1.0"
authors = ["IML Team <iml@whamcloud.com>"]
edition = "2018"

[dependencies]
iml-tracing = { version = "0.1", path = "../iml-tracing" }
thiserror = "1.0"
tokio = { version = "0.2", features = [ "macros", "time" ] }
wbem-client = { version = "0.1", path = "../wbem-client" }